# shellexec

./: Cargo.toml  README.md
.github/workflows/: ci.yml
shellexec/: Cargo.toml
shellexec/src/: main.rs
shellexec/test_input/: linux  linux.asm  windows  windows.asm
virtual-memory/: Cargo.toml  README.md
virtual-memory/src/: lib.rs
