[package]
name = "shellexec"
version = "0.1.0"
authors = ["StackOverflowExcept1on"]
edition = "2021"
description = "Cross-platform shellcode executor in rwx memory"
repository = "https://github.com/StackOverflowExcept1on/shellexec"
license = "MIT"
keywords = ["shellcode", "shellcode-loader"]
categories = ["command-line-utilities", "memory-management"]

[dependencies]
argh = "0.1.9"
virtual-memory = { path = "../virtual-memory" }
