[package]
name = "shellexec"
version = "0.1.2"
authors = ["StackOverflowExcept1on"]
edition = "2021"
description = "Cross-platform shellcode executor in rwx memory"
readme = "../README.md"
repository = "https://github.com/StackOverflowExcept1on/shellexec"
license = "MIT"
keywords = ["shellcode", "shellcode-loader"]
categories = ["command-line-utilities", "memory-management"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
virtual-memory = { version = "0.1.2", path = "../virtual-memory" }
