[package]
name = "virtual-memory"
version = "0.1.3"
authors = ["StackOverflowExcept1on"]
edition = "2021"
description = "Library for allocating RWX memory on Unix and Windows"
repository = "https://github.com/StackOverflowExcept1on/shellexec"
license = "MIT"
keywords = ["virtual-memory", "rwx", "rwx-memory"]
categories = ["memory-management", "api-bindings", "no-std"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory"] }
